# gilqore

./: .gitignore  1  123fdsauji_dsa9324j  CMakeLists.txt  LICENSE  README.md  ^1  a.asm  a.exe.stackdump  asd2  compile_compiler.sh  console.exe.stackdump  giescript.exe.stackdump  interpreter.exe.stackdump  makefile  out  tags  test.c  test.cpp  test_compile.c  test_compiler.sh  test_perf  test_program.c  timed_block.c  todo  types.c  types.cpp  types.h  types.txt  types2.cpp  types2.txt  vm.asm  vm.c  vm.ilk  vm_index_ip_stack.asm  vmout
asm/: build.bat  idk.asm  ispcmodule.h  ispcmodule.ispc  nasm.txt  process.asm  re3.asm  test2.asm  testispc.c
gfx/: Makefile  app.c  app.h  buffer.c  buffer.h  debug.c  debug.h  debug.txt  glfw.c  glfw.h  helper_macros.h  main.c  system.c  system.h  test.c
misc/: def_file_template.h  gmc_file_template.txt  module_template.txt  test_file_template.txt  test_template.txt
mk/: 00-mk-dependencies.mk  01-os-detect.mk  02-c-flags.mk  04-help.mk  05-scripts.mk  06-test_framework.mk  07-scripts.mk  c-lint.mk  module_template.py  module_template.txt  os-detect.mk  pyhelp.py  pytester.py  sphinx_template.txt  sphinx_update.py  test_template.py  test_template.txt
modules/: defs.h  error_codes  module_compiler.c  module_compiler.h  module_compiler_defs.h  module_compiler_utils.c  module_compiler_utils.h  modules.gmc  modules.mk  modules_defs.h
modules_todo/: modules_defs.h
preprocessed/: abs.c_preprocessed.c  basic_types.c_preprocessed.c  circular_buffer.c_preprocessed.c  clamp.c_preprocessed.c  color.c_preprocessed.c  (+56 more)
rst/: conf.py  (+1 more)
(+1694 files in other folders)
